--- a/main.html
+++ b/main.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Snake HTML Game</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <canvas width="400" height="400" id="snake"></canvas>
-    <div class="button-container">
-        <button id="startButton">START GAME</button>
-        <button id="pauseButton" style="display: none;">PAUSE GAME</button>
-    </div>
-    <div id="score">Apples Eaten: 0</div>
-    <div id="gameOverMessage">Game Over</div>
-    <script src="script.js"></script>
-</body>
+    <head>
+        <title>Snake HTML Game</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <canvas width="400" height="400" id="snake"></canvas>
+        <div class="button-container">
+            <button id="startButton">START GAME</button>
+            <button id="pauseButton" style="display: none;">PAUSE GAME</button>
+        </div>
+        
+        <div id="score">Apples Eaten: 0</div>
+        <div id="gameOverMessage">Game Over</div>
+        <script src="script.js"></script>
+    </body>
 </html>
